--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
