--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^1.0.5",
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
     "monaco-editor": "^0.45.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
@@ -27,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
